--- a/src/StepMania-net2010.vcxproj
+++ b/src/StepMania-net2010.vcxproj
@@ -478,6 +478,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
     <ClCompile Include="Style.cpp" />
     <ClCompile Include="StyleUtil.cpp" />
     <ClCompile Include="TimingData.cpp" />
+    <ClCompile Include="TimingSegments.cpp" />
     <ClCompile Include="TitleSubstitution.cpp" />
     <ClCompile Include="Trail.cpp" />
     <ClCompile Include="TrailUtil.cpp" />
@@ -1798,6 +1799,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
     <ClInclude Include="SubscriptionManager.h" />
     <ClInclude Include="ThemeMetric.h" />
     <ClInclude Include="TimingData.h" />
+    <ClInclude Include="TimingSegments.h" />
     <ClInclude Include="TitleSubstitution.h" />
     <ClInclude Include="Trail.h" />
     <ClInclude Include="TrailUtil.h" />
