Added the BattleRaveMirror metric.
If you guys want your battles to not be mirrored/turned,
this is the metric to change. By default, it's on ITG
behavior.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1080,6 +1080,7 @@ PercentUntilColorCombo=0.25
 ComboStoppedAt=50
 AttackRunTimeRandom=6
 AttackRunTimeMine=7
+BattleRaveMirror=true
 
 [PlayerOptions]
 RandomSpeedChance=0.2
