--- a/src/archutils/Win32/WindowsResources.rc
+++ b/src/archutils/Win32/WindowsResources.rc
@@ -196,14 +196,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "the spinal shark collective\nhttp://ssc.ajworld.net/"
-            VALUE "FileDescription", "sm-ssc"
-            VALUE "FileVersion", "1, 2, 4, 0"
+            VALUE "CompanyName", "StepMania Team\nhttp://www.stepmania.com/"
+            VALUE "FileDescription", "StepMania"
+            VALUE "FileVersion", "5, 0, 0, 2"
             VALUE "InternalName", "sm-ssc"
             VALUE "LegalCopyright", "Copyright © 2001-2011"
             VALUE "OriginalFilename", "StepMania.exe"
-            VALUE "ProductName", "sm-ssc"
-            VALUE "ProductVersion", "1, 2, 4, 0"
+            VALUE "ProductName", "StepMania"
+            VALUE "ProductVersion", "5, 0, 0, 2"
         END
     END
     BLOCK "VarFileInfo"
