--- a/src/StepMania-net2010.vcxproj.filters
+++ b/src/StepMania-net2010.vcxproj.filters
@@ -1629,6 +1629,9 @@
     <ClCompile Include="SongPosition.cpp">
       <Filter>Data Structures</Filter>
     </ClCompile>
+    <ClCompile Include="InGameLoadingWindow.cpp">
+      <Filter>Actors used in Menus</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Screen.h">
@@ -3025,6 +3028,9 @@
     </ClInclude>
     <ClInclude Include="SongPosition.h">
       <Filter>Data Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="InGameLoadingWindow.h">
+      <Filter>Actors used in Menus</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
