--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -409,8 +409,7 @@ MeterSetCommand=%function(self,param) \
 end;
 #
 ShowDescription=true
-DescriptionX=GetGamePrefB("AutoSetStyle") and (-64-8+20) or (-64-8)
-# DescriptionX=GetUserPrefB("UserPrefAutoSetStyle") and (-64-8+20) or (-64-8)
+DescriptionX=GetUserPrefB("UserPrefAutoSetStyle") and (-64-8+20) or (-64-8)
 DescriptionOnCommand=shadowlength,1;horizalign,left;zoom,0.65;maxwidth,128+8-20;uppercase,true;
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
@@ -428,7 +427,7 @@ AutogenY=0
 #AutogenOnCommand=diffuseshift;effectcolor1,Colors.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
 AutogenOnCommand=blend,Blend.Add;diffuseshift;effectcolor1,color("#FFCC00FF");effectcolor2,color("#FFCC0088");
 #
-ShowStepsType=GetGamePrefB("AutoSetStyle")
+ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
 StepsTypeX=-64-8
 StepsTypeY=0
 StepsTypeOnCommand=
@@ -883,8 +882,7 @@ StageDisplayY=SCREEN_TOP+24+3
 StageDisplayOnCommand=skewx,-0.125;draworder,105;fov,90;zoom,0.675;zoomy,0;sleep,0.35;smooth,0.35;zoomy,0.675
 StageDisplayOffCommand=linear,0.25;zoomy,0;
 #
-ShowDifficultyDisplay=not GetGamePrefB("AutoSetStyle") and not GAMESTATE:IsCourseMode()
-# ShowDifficultyDisplay=not GetUserPrefB("UserPrefAutoSetStyle") and not GAMESTATE:IsCourseMode()
+ShowDifficultyDisplay=not GetUserPrefB("UserPrefAutoSetStyle") and not GAMESTATE:IsCourseMode()
 DifficultyDisplayX=SCREEN_CENTER_X-160
 DifficultyDisplayY=SCREEN_TOP+160-96+2
 DifficultyDisplayOnCommand=draworder,105;fov,90;zoom,1;zoomy,0;sleep,0.35;smooth,0.35;zoomy,1
@@ -1069,8 +1067,7 @@ end;
 #
 ShowDescription=true
 DescriptionX=-20-32
-DescriptionY=GetGamePrefB("AutoSetStyle") and -5 or 0
-# DescriptionY=GetUserPrefB("UserPrefAutoSetStyle") and -5 or 0
+DescriptionY=GetUserPrefB("UserPrefAutoSetStyle") and -5 or 0
 DescriptionOnCommand=shadowlength,1;uppercase,true;zoom,0.75;maxwidth,128+8
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
@@ -1088,8 +1085,7 @@ AutogenY=0
 AutogenOnCommand=
 AutogenSetCommand=%function(self,param) if param.Difficulty then self:diffuse(CustomDifficultyToLightColor(param.Difficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.Difficulty)); end end
 #
-ShowStepsType=GetGamePrefB("AutoSetStyle")
-# ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
+ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
 StepsTypeX=-20-32
 StepsTypeY=7
 StepsTypeOnCommand=zoom,0.45
@@ -1119,8 +1115,7 @@ end;
 #
 ShowDescription=true
 DescriptionX=-20
-DescriptionY=GetGamePrefB("AutoSetStyle") and -5 or 0
-# DescriptionY=GetUserPrefB("UserPrefAutoSetStyle") and -5 or 0
+DescriptionY=GetUserPrefB("UserPrefAutoSetStyle") and -5 or 0
 DescriptionOnCommand=shadowlength,1;uppercase,true;zoom,0.75;maxwidth,128+8
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
@@ -1139,8 +1134,7 @@ AutogenY=0
 AutogenOnCommand=
 AutogenSetCommand=%function(self,param) if param.Difficulty then self:diffuse(CustomDifficultyToLightColor(param.Difficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.Difficulty)); end end
 #
-ShowStepsType=GetGamePrefB("AutoSetStyle")
-# ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
+ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
 StepsTypeX=-20
 StepsTypeY=7
 StepsTypeOnCommand=zoom,0.45
