--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -25,7 +25,7 @@ ScreenHeight=480
 # Allows you to pick all available game modes for your gametype: for example,
 # inserting enough coins for 1p would let you choose between solo, single
 # and double before each game
-AutoSetStyle=GetGamePrefB("AutoSetStyle")
+AutoSetStyle=GetUserPrefB("UserPrefAutoSetStyle")
 
 # Default modifiers and noteskin.
 DefaultModifiers="default,1.5x"
