--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -604,7 +604,7 @@ ShowLogo=true
 LogoX=SCREEN_CENTER_X
 LogoY=SCREEN_CENTER_Y-68
 LogoOnCommand=bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.75
-LogoOffCommand=stopeffect;bouncebegin,0.35;rotationz,360;zoom,0
+LogoOffCommand=stopeffect;bouncebegin,0.35;zoom,0
 #
 ShowCurrentGametype=true
 CurrentGametypeX=SCREEN_WIDTH*0.01
