fix up version info on title menu

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -631,15 +631,15 @@ SystemDirectionOnCommand=
 SystemDirectionOffCommand=
 #
 ShowVersionInfo=true
-VersionInfoX=SCREEN_RIGHT-84
+VersionInfoX=SCREEN_RIGHT-90
 VersionInfoY=SCREEN_BOTTOM-64
 VersionInfoOnCommand=
 VersionInfoOffCommand=
 #
 ShowNetworkStatus=true
-NetworkStatusX=SCREEN_WIDTH*0.0125
+NetworkStatusX=SCREEN_LEFT+12
 NetworkStatusY=SCREEN_HEIGHT*0.85
-NetworkStatusOnCommand=horizalign,left;
+NetworkStatusOnCommand=halign,0;
 NetworkStatusOffCommand=linear,0.5;cropright,1
 #
 HelpY=SCREEN_BOTTOM-24
