change ScreenOptionsMaster Next/Back screen to post-init screen

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2510,8 +2510,8 @@ CursorOnCommand=visible,false
 Class="ScreenOptionsMaster"
 Fallback="ScreenOptionsSimpleService"
 #
-NextScreen=Branch.Init()
-PrevScreen=Branch.Init()
+NextScreen=Branch.AfterInit()
+PrevScreen=Branch.AfterInit()
 
 LineNames="SystemDirection,KeyConfig,GameType,6,8,Reload,Credits,MoreOptions"
 # LineNames="SystemDirection,1,2,Sync,13,3,10,11,4,12,6,5,Theme,8,9"
