Split the Editor's Area menu into two menus.
Use the "Enter" key for the old menu,
and the "A" key for the Alter menu
(requires having selected an area of notes).

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3752,6 +3752,9 @@ TitleX=SCREEN_CENTER_X-80
 [ScreenMiniMenuAreaMenu]
 Fallback="ScreenMiniMenu"
 
+[ScreenMiniMenuAlterMenu]
+Fallback="ScreenMiniMenu"
+
 [ScreenMiniMenuStepsInformation]
 Fallback="ScreenMiniMenu"
 
