[ScreenNetSelectMusic] Add PlayerOptionsScreen metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3951,6 +3951,7 @@ PrevScreen="ScreenNetRoom"
 NextScreen="ScreenStageInformation"
 NoSongsScreen=Branch.TitleMenu()
 RoomSelectScreen="ScreenNetRoom"
+PlayerOptionsScreen="ScreenPlayerOptions"
 Codes="CodeDetectorOnline"
 
 ShowStyleIcon=false
