[LifeMeterBattery] Added some metrics that allow anyone to change how the battery meter handles lives.  * MinScoreToKeepLife='TapNoteScore_*' - any score below this = loss of life.  * SubtractLives=1 - how many lives are lost when going below MinScoreToKeepLife.  * MinesSubtractLives=1 - how many lives are lost when hitting a mine.  * HeldAddLives=0 - how many lives are gained when a hold is completed.  * LetGoSubtractLives=1 - how many lives are lost on a dropped hold.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -606,6 +606,16 @@ OverY=0
 
 [LifeMeterBattery]
 # The bar that shows up in Oni mode.
+# any score below this one will cause you to lose a life.
+MinScoreToKeepLife='TapNoteScore_W3'
+# how many lives you'll lose upon doing so.
+SubtractLives=1
+# how many lives you'll lose hitting a mine
+MinesSubtractLives=1
+# how many lives a successful hold will net you.
+HeldAddLives=0
+# how many lives an unsuccessful hold will cost you.
+LetGoSubtractLives=1
 
 # How long it flashes when you lose a life.
 BatteryBlinkTime=1.2
@@ -614,7 +624,8 @@ BatteryP1X=-92
 BatteryP1Y=2
 BatteryP2X=92
 BatteryP2Y=2
-# Where your live count is
+# Where your life count is
+NumLivesFormat="x%d"
 NumLivesP1X=-92
 NumLivesP1Y=0
 NumLivesP2X=92
