add GainLife/LoseLife commands.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -628,8 +628,12 @@ BatteryP2Y=2
 NumLivesFormat="x%d"
 NumLivesP1X=-92
 NumLivesP1Y=0
+NumLivesP1GainLifeCommand=
+NumLivesP1LoseLifeCommand=zoom,1.5;linear,0.15;zoom,1
 NumLivesP2X=92
 NumLivesP2Y=0
+NumLivesP2GainLifeCommand=
+NumLivesP2LoseLifeCommand=zoom,1.5;linear,0.15;zoom,1
 
 [LifeMeterBattery Percent]
 # The percentage on the bar. I wouldn't even bother changing this, because I
