[LifeMeterBattery] Added DangerThreshold metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -617,6 +617,8 @@ HeldAddLives=0
 # how many lives an unsuccessful hold will cost you.
 LetGoSubtractLives=1
 
+# How many lives trigger the "Danger" state.
+DangerThreshold=1
 # How long it flashes when you lose a life.
 BatteryBlinkTime=1.2
 # Where the batteries are
