Add two new noteskin metrics.
This properly resolves bug tracker issue 190.

--- a/NoteSkins/common/common/metrics.ini
+++ b/NoteSkins/common/common/metrics.ini
@@ -1,5 +1,7 @@
 [NoteDisplay]
 DrawHoldHeadForTapsOnSameRow=1
+DrawRollHeadForTapsOnSameRow=1
+TapHoldRollOnRowMeansHold=1
 AnimationIsBeatBased=1
 TapNoteAnimationLength=1
 TapMineAnimationLength=1
