--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -705,7 +705,7 @@ IconChoiceDoubleX=SCREEN_CENTER_X-160
 IconChoiceDoubleY=SCREEN_CENTER_Y
 IconChoiceDoubleOnCommand=zoom,0;bounceend,0.35;zoom,1
 IconChoiceDoubleOffCommand=linear,0.1175;zoomx,0
-#
+####
 IconChoiceSoloX=SCREEN_CENTER_X-160
 IconChoiceSoloY=SCREEN_CENTER_Y+96
 IconChoiceSoloOnCommand=zoom,0;bounceend,0.35;zoom,1
@@ -715,16 +715,21 @@ IconChoiceHalfDoubleX=SCREEN_CENTER_X-160
 IconChoiceHalfDoubleY=SCREEN_CENTER_Y+96
 IconChoiceHalfDoubleOnCommand=zoom,0;bounceend,0.35;zoom,1
 IconChoiceHalfDoubleOffCommand=linear,0.1175;zoomx,0
-#
+####
 IconChoiceVersusX=SCREEN_CENTER_X+160
-IconChoiceVersusY=SCREEN_CENTER_Y-48
+IconChoiceVersusY=string.find(THEME:GetMetric("ScreenSelectStyle","ChoiceNames"),"Routine") and SCREEN_CENTER_Y-96 or SCREEN_CENTER_Y-48
 IconChoiceVersusOnCommand=zoom,0;bounceend,0.35;zoom,1
 IconChoiceVersusOffCommand=linear,0.1175;zoomx,0
 #
 IconChoiceCoupleX=SCREEN_CENTER_X+160
-IconChoiceCoupleY=SCREEN_CENTER_Y+48
+IconChoiceCoupleY=string.find(THEME:GetMetric("ScreenSelectStyle","ChoiceNames"),"Routine") and SCREEN_CENTER_Y or SCREEN_CENTER_Y+48
 IconChoiceCoupleOnCommand=zoom,0;bounceend,0.35;zoom,1
 IconChoiceCoupleOffCommand=linear,0.1175;zoomx,0
+#
+IconChoiceRoutineX=SCREEN_CENTER_X+160
+IconChoiceRoutineY=SCREEN_CENTER_Y+96
+IconChoiceRoutineOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceRoutineOffCommand=linear,0.1175;zoomx,0
 #
 IconChoicekb7X=SCREEN_CENTER_X
 IconChoicekb7Y=SCREEN_CENTER_Y
