fix start button issues on ScreenSelectProfile

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1808,8 +1808,7 @@ CodeUp="+MenuUp"
 CodeUp2="+Up"
 CodeDown="+MenuDown"
 CodeDown2="+Down"
-# Holding Start let us skip ( annoying )
-CodeStart="~Start,+Start"
+CodeStart="+Start"
 CodeBack="Back"
 CodeCenter="Center"
 CodeDownLeft="DownLeft"
