--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2353,10 +2353,10 @@ Mines,3="mod,mines;name,Add"
 Mines,4="mod,attackmines;name,AttackMines"
 
 Attacks="3"
-AttacksDefault="mod,songattacks"
-Attacks,1="name,SongAttacks"
+AttacksDefault="mod,stepattacks"
+Attacks,1="name,StepAttacks"
 Attacks,2="mod,randomattacks;name,RandomAttacks"
-Attacks,3="mod,no randomattacks,no songattacks;name,Off"
+Attacks,3="mod,no randomattacks,no stepattacks;name,Off"
 
 PlayerAutoPlay="2"
 PlayerAutoPlayDefault="mod,no playerautoplay"
