--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1808,7 +1808,8 @@ CodeUp="+MenuUp"
 CodeUp2="+Up"
 CodeDown="+MenuDown"
 CodeDown2="+Down"
-CodeStart="+Start"
+# Holding Start let us skip ( annoying )
+CodeStart="~Start,+Start"
 CodeBack="Back"
 CodeCenter="Center"
 CodeDownLeft="DownLeft"
