[default] You are not allowed to go to ScreenSelectProfile if you do not have more than 2 profiles.

--- a/Themes/default-dev-midi/metrics.ini
+++ b/Themes/default-dev-midi/metrics.ini
@@ -1,5 +1,5 @@
 [Global]
 FallbackTheme=default
 [ScreenGameplay]
-LifeP1OnCommand=visible,false
-LifeP2OnCommand=visible,false
+# LifeP1OnCommand=visible,false
+# LifeP2OnCommand=visible,false
