--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -507,6 +507,7 @@ ArtistPrependString=""
 [ScreenDebugOverlay]
 
 [ScreenSystemLayer]
+ShowClock=true
 CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_1);
 #
 CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_2);
