New metric: AutoLockEditSteps.
This is mainly for anyone that wants to have
bonus charts available after passing Expert.

This will probably fail if there are bonus charts
after Hard, but no Expert.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -124,6 +124,7 @@ ExtraColor=color("#ff0000")	-- red
 [UnlockManager]
 # Unlock specific things.
 AutoLockChallengeSteps=false
+AutoLockEditSteps=false
 UnlockNames=""
 
 # useful commands:
