New metric: SongsNotAdditional.
Set this to false to have AdditionalSongs be valid for
unlocking purposes.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -125,6 +125,7 @@ ExtraColor=color("#ff0000")	-- red
 # Unlock specific things.
 AutoLockChallengeSteps=false
 AutoLockEditSteps=false
+SongsNotAdditional=true
 UnlockNames=""
 
 # useful commands:
