--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3651,7 +3651,7 @@ LoopOnChartEnd=true
 
 CurrentBeatFormat="%s:\n  %.5f\n"
 CurrentSecondFormat="%s:\n  %.5f\n"
-SnapToFormat="%s:\n  %s\n"
+SnapToFormat="%s: %s\n"
 SelectionBeatBeginFormat="%s:\n  %.5f"
 SelectionBeatUnfinishedFormat=" ...\n"
 SelectionBeatEndFormat="-%.5f\n"
@@ -3662,6 +3662,7 @@ ChartStyleFormat="%s:\n  %s\n"
 MainTitleFormat="%s:\n  %s\n"
 SubtitleFormat="%s:\n  %s\n"
 TapNoteTypeFormat="%s: %s\n"
+SegmentTypeFormat="%s: %s\n"
 NumStepsFormat="%s: %d\n"
 NumJumpsFormat="%s: %d\n"
 NumHoldsFormat="%s: %d\n"
