Use NoAttacks vs StepAttacks.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2355,10 +2355,10 @@ Mines,3="mod,mines;name,Add"
 Mines,4="mod,attackmines;name,AttackMines"
 
 Attacks="3"
-AttacksDefault="mod,stepattacks"
-Attacks,1="name,StepAttacks"
+AttacksDefault="mod,no randomattacks, no noattacks"
+Attacks,1="name,On"
 Attacks,2="mod,randomattacks;name,RandomAttacks"
-Attacks,3="mod,no randomattacks,no stepattacks;name,Off"
+Attacks,3="mod,noattacks;name,Off"
 
 PlayerAutoPlay="2"
 PlayerAutoPlayDefault="mod,no playerautoplay"
