Use Step Author instead of Chart Style on right.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3658,6 +3658,7 @@ SelectionBeatEndFormat="-%.5f\n"
 DifficultyFormat="%s:\n  %s\n"
 RoutinePlayerFormat="%s:\n  %d\n"
 DescriptionFormat="%s:\n  %s\n"
+StepAuthorFormat="%s:\n  %s\n"
 ChartStyleFormat="%s:\n  %s\n"
 MainTitleFormat="%s:\n  %s\n"
 SubtitleFormat="%s:\n  %s\n"
