[DEFAULT] Various global fixes, default songs ( see rest of log ) i317 - Installed Songs, Courses On Gameplay text i355 - midi-note, midi-solo Hold Heads fixed MEW  - 2 New Songs, Courtesy of Kommisar!! NEW  - Old SongMeterDisplay implemented for Split Timing FIX  - Remove non-working failing logic FIX  - Misc Fixes

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2083,7 +2083,8 @@ ForceTimer=true
 TimerMetricsGroup="MenuTimerNoSound"
 TimerSeconds=5
 #
-
+# ScreenOnCommand=%SetFail()
+#
 [ScreenOptions]
 Fallback="ScreenWithMenuElements"
 NavigationMode="normal"
@@ -2369,7 +2370,7 @@ Hide="3;selectmultiple"
 HideDefault="mod,no dark,no blind,no cover"
 Hide,1="mod,dark;name,Dark"
 Hide,2="mod,blind;name,Blind"
-Hide,3="mod,60% cover;name,Cover"
+Hide,3="mod,80% cover;name,Cover"
 
 # Hide="3"
 # HideDefault="mod,no dark,no blind"
