--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -613,6 +613,13 @@ CurrentGametypeY=SCREEN_HEIGHT*0.1575
 CurrentGametypeOnCommand=vertalign,bottom;
 CurrentGametypeOffCommand=linear,0.5;cropleft,1
 #
+ShowNumSongs=true
+NumSongsX=SCREEN_WIDTH*0.99
+NumSongsY=SCREEN_HEIGHT*0.1575+3
+NumSongsOnCommand=vertalign,bottom;horizalign,right;zoom,0.5;playcommand,"Set"
+NumSongsOffCommand=
+#
+#
 ShowTimingDifficulty=true
 TimingDifficultyX=SCREEN_LEFT+84
 TimingDifficultyY=SCREEN_TOP+22
@@ -828,6 +835,7 @@ IconChoiceEndlessOffCommand=linear,0.1175;zoomx,0
 [ScreenGameInformation]
 
 [ScreenSelectMusic]
+SampleMusicPreviewMode='SampleMusicPreviewMode_LastSong'
 UsePlayerSelectMenu=false
 # OptionsMenuAvailable=(getenv(sMode) ~= Oni)
 SelectMenuAvailable=true
@@ -1313,12 +1321,12 @@ SongTitleOffCommand=
 #
 SongMeterDisplayP1X=SCREEN_LEFT+16
 SongMeterDisplayP1Y=SCREEN_CENTER_Y
-SongMeterDisplayP1OnCommand=rotationz,-90;zoom,0;addx,-24;sleep,1.5;decelerate,0.5;zoom,1;addx,24
+SongMeterDisplayP1OnCommand=draworder,5;rotationz,-90;zoom,0;addx,-24;sleep,1.5;decelerate,0.5;zoom,1;addx,24
 SongMeterDisplayP1OffCommand=
 #
 SongMeterDisplayP2X=SCREEN_RIGHT-16
 SongMeterDisplayP2Y=SCREEN_CENTER_Y
-SongMeterDisplayP2OnCommand=rotationz,-90;zoom,0;addx,24;sleep,1.5;decelerate,0.5;zoom,1;addx,-24
+SongMeterDisplayP2OnCommand=draworder,5;rotationz,-90;zoom,0;addx,24;sleep,1.5;decelerate,0.5;zoom,1;addx,-24
 SongMeterDisplayP2OffCommand=
 #
 ShowBPMDisplay=true
@@ -1337,7 +1345,7 @@ StageDisplayOffCommand=bounceend,0.25;zoom,0
 ShowScoreFrame=GetUserPrefB("GameplayFooter");
 ScoreFrameX=SCREEN_CENTER_X
 ScoreFrameY=SCREEN_BOTTOM+4
-ScoreFrameOnCommand=draworder,100;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+4;diffuse,color("#ffd400");addy,80;sleep,2;decelerate,0.5;addy,-80;
+ScoreFrameOnCommand=draworder,4;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+4;diffuse,color("#ffd400");addy,80;sleep,2;decelerate,0.5;addy,-80;
 ScoreFrameOffCommand=
 #
 LifeP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
