Acknowledge Kommisar for songs, fix things more

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -615,7 +615,7 @@ CurrentGametypeOffCommand=linear,0.5;cropleft,1
 #
 ShowNumSongs=true
 NumSongsX=SCREEN_WIDTH*0.99
-NumSongsY=SCREEN_HEIGHT*0.1575+3
+NumSongsY=SCREEN_HEIGHT*0.1575+5
 NumSongsOnCommand=vertalign,bottom;horizalign,right;zoom,0.5;playcommand,"Set"
 NumSongsOffCommand=
 #
@@ -1315,8 +1315,8 @@ SongMeterDisplayOffCommand=
 #
 ShowSongTitle=true
 SongTitleX=SCREEN_CENTER_X
-SongTitleY=SCREEN_TOP+50+6
-SongTitleOnCommand=draworder,55;shadowlength,1;basezoom,0.5;zoomy,0;sleep,1.5+0.5;smooth,0.5;zoom,1;y,SCREEN_TOP+50+12
+SongTitleY=SCREEN_TOP+50
+SongTitleOnCommand=draworder,55;shadowlength,1;basezoom,0.5;zoomy,0;sleep,1.5+0.5;smooth,0.5;zoom,1;y,SCREEN_TOP+50
 SongTitleOffCommand=
 #
 SongMeterDisplayP1X=SCREEN_LEFT+16
