Return things to normal,  normalize song folders

--- a/Data/AI.ini
+++ b/Data/AI.ini
@@ -40,16 +40,16 @@ WeightW1=50
 
 [Skill5]
 WeightMiss=
-WeightW5=0
-WeightW4=0
-WeightW3=0
-WeightW2=0
-WeightW1=100
+WeightW5=1
+WeightW4=1
+WeightW3=5
+WeightW2=30
+WeightW1=55
 
 [Skill6]
-WeightMiss=
+WeightMiss=0
 WeightW5=0
 WeightW4=0
-WeightW3=0
-WeightW2=0
-WeightW1=100
+WeightW3=5
+WeightW2=30
+WeightW1=70
