--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1086,7 +1086,8 @@ CheckpointsUseTickcounts=(GAMESTATE:GetCurrentGame():GetName() == "pump")
 ; deprecated?
 CheckpointsUseTimeSignatures=false
 CheckpointsTapsSeparateJudgment=CheckpointsTapsSeparateJudgment()
-CheckpointsFlashOnHold=false
+; someone misunderstood me :x -Daisu
+CheckpointsFlashOnHold=(GAMESTATE:GetCurrentGame():GetName() == "pump")
 ImmediateHoldLetGo=ImmediateHoldLetGo()
 RequireStepOnHoldHeads=HoldHeadStep()
 RequireStepOnMines=false
