hopefully try and fix issue 268 but I didn't test these yet

--- a/NoteSkins/kb7/retrobar-iidx/metrics.ini
+++ b/NoteSkins/kb7/retrobar-iidx/metrics.ini
@@ -4,7 +4,12 @@ DrawHoldHeadForTapsOnSameRow=0
 StartDrawingHoldBodyOffsetFromHead=0
 StopDrawingHoldBodyOffsetFromTail=-32
 
+TapNoteAnimationIsVivid=0
+
 # control the vertical
+TapNoteNoteColorTextureCoordSpacingX=0
+TapNoteNoteColorTextureCoordSpacingY=0
+
 TapNoteAdditionTextureCoordOffsetX=0
 TapNoteAdditionTextureCoordOffsetY=0.5
 
