New metric, MModHighCap. Can fix Tsuhsuixamush.
Set to 0 or less to remove the cap.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1101,6 +1101,7 @@ ComboStoppedAt=50
 AttackRunTimeRandom=6
 AttackRunTimeMine=7
 BattleRaveMirror=true
+MModHighCap=600
 
 [PlayerOptions]
 RandomSpeedChance=0.2
