This doesn't require two lines.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3659,7 +3659,7 @@ SelectionBeatBeginFormat="%s:\n  %.6f"
 SelectionBeatUnfinishedFormat=" ...\n"
 SelectionBeatEndFormat="-%.6f\n"
 DifficultyFormat="%s:\n  %s\n"
-RoutinePlayerFormat="%s:\n  %d\n"
+RoutinePlayerFormat="%s: %d\n"
 DescriptionFormat="%s:\n  %s\n"
 StepAuthorFormat="%s:\n  %s\n"
 ChartStyleFormat="%s:\n  %s\n"
