Another attempt at Mini <-> Tiny. This one should be much closer or working.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -200,8 +200,8 @@ DrunkOffsetFrequency=10
 DrunkArrowMagnitude=0.5
 BeatOffsetHeight=15
 BeatPIHeight=2
-MiniPercentBase=0.5
-MiniPercentGate=1
+TinyPercentBase=0.5
+TinyPercentGate=1
 DizzyHoldHeads=false
 QuantizeArrowYPosition=false
 
