--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -200,8 +200,8 @@ DrunkOffsetFrequency=10
 DrunkArrowMagnitude=0.5
 BeatOffsetHeight=15
 BeatPIHeight=2
-MiniPercentBase=0.5
-MiniPercentGate=1
+TinyPercentBase=0.5
+TinyPercentGate=1
 DizzyHoldHeads=false
 QuantizeArrowYPosition=false
 
@@ -2199,22 +2199,23 @@ Accel,5="mod,boomerang;name,Boomerang"
 # Accel,5="mod,expand;name,Expand"
 # Accel,6="mod,boomerang;name,Boomerang"
 
-Effect="14;selectmultiple"
+Effect="15;selectmultiple"
 EffectDefault="mod,no drunk,no dizzy,,no twirl,no roll,no confusion,no mini,no tiny,no flip,no invert,no tornado,no tipsy,no bumpy,no beat,no xmode"
 Effect,1="mod,drunk;name,Drunk"
 Effect,2="mod,dizzy;name,Dizzy"
 Effect,3="mod,twirl;name,Twirl"
 Effect,4="mod,roll;name,Roll"
 Effect,5="mod,confusion;name,Confusion"
-Effect,6="mod,tiny;name,Tiny"
-Effect,7="mod,-100% mini;name,Big"
-Effect,8="mod,flip;name,Flip"
-Effect,9="mod,invert;name,Invert"
-Effect,10="mod,tornado;name,Tornado"
-Effect,11="mod,tipsy;name,Tipsy"
-Effect,12="mod,bumpy;name,Bumpy"
-Effect,13="mod,beat;name,Beat"
-Effect,14="mod,45% xmode;name,XMode"
+Effect,6="mod,mini;name,Mini"
+Effect,7="mod,tiny;name,Tiny"
+Effect,8="mod,-100% mini;name,Big"
+Effect,9="mod,flip;name,Flip"
+Effect,10="mod,invert;name,Invert"
+Effect,11="mod,tornado;name,Tornado"
+Effect,12="mod,tipsy;name,Tipsy"
+Effect,13="mod,bumpy;name,Bumpy"
+Effect,14="mod,beat;name,Beat"
+Effect,15="mod,45% xmode;name,XMode"
 
 EffectsReceptor="selectmultiple"
 EffectsReceptorDefault=""
