--- a/NoteSkins/dance/midi-note/metrics.ini
+++ b/NoteSkins/dance/midi-note/metrics.ini
@@ -69,8 +69,8 @@ LetGoCommand=blend,'BlendMode_Add';
 HeldCommand=blend,'BlendMode_Add';diffuse,1.0,1.0,0.3,0.875;zoom,1;linear,0.06;zoom,1.1;linear,0.06;diffusealpha,0
 
 [HoldGhostArrow]
-HoldingOnCommand=visible,true
-HoldingOffCommand=visible,false
+HoldingOnCommand=blend,'BlendMode_Add';pulse;effectmagnitude,1,1.125,1;effectperiod,0.05;effectclock,'beatnooffset';visible,true
+HoldingOffCommand=blend,'BlendMode_Add';stopeffect;visible,false
 
 [ReceptorArrow]
 W3Command=stoptweening;zoom,0.85;linear,0.12;zoom,1
