--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2085,7 +2085,7 @@ ForceTimer=true
 TimerMetricsGroup="MenuTimerNoSound"
 TimerSeconds=5
 #
-# ScreenOnCommand=%SetFail()
+ScreenBeginCommand=%SetFail
 #
 [ScreenOptions]
 Fallback="ScreenWithMenuElements"
