--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -413,6 +413,8 @@ SortLevel5Color=color("0,1,0,1")
 # Custom system that lets you rename certain classes of difficulties to 
 # something else. Mostly for custom games and game emulation, PIU for example.
 
+Names=
+
 [DifficultyList]
 # A list that shows difficulties in a song.
 CapitalizeDifficultyNames=false
