Let's try that one again.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3592,6 +3592,7 @@ DifficultyFormat="%s:\n  %s\n"
 RoutinePlayerFormat="%s: %d\n"
 DescriptionFormat="%s:\n  %s\n"
 StepAuthorFormat="%s:\n  %s\n"
+ChartNameFormat="%s:\n  %s\n"
 ChartStyleFormat="%s:\n  %s\n"
 MainTitleFormat="%s:\n  %s\n"
 SubtitleFormat="%s:\n  %s\n"
