it's a shame I have to use this, but its for the better really

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -966,8 +966,8 @@ StopOffsetX=50
 DelayOffsetX=120
 WarpOffsetX=90
 TimeSignatureOffsetX=30
-TickcountOffsetX=50
-ComboOffsetX=70
+TickcountOffsetX=70
+ComboOffsetX=50
 LabelOffsetX=130
 SpeedOffsetX=30
 ScrollOffsetX=100
@@ -3220,6 +3220,9 @@ PlayerType="PlayerShared"
 Class="ScreenEvaluation"
 Fallback="ScreenWithMenuElements"
 #
+NextScreen=Branch.AfterEvaluation()
+PrevScreen=Branch.AfterEvaluation()
+#
 LightsMode="LightsMode_MenuStartOnly"
 #
 Summary=false
@@ -3305,30 +3308,34 @@ DetailLineFormat="%3d/%3d"
 [ScreenEvaluationNormal]
 Fallback="ScreenEvaluation"
 #
-NextScreen="ScreenProfileSave"
+NextScreen=Branch.AfterEvaluation()
+PrevScreen=Branch.AfterEvaluation()
 
 [ScreenEvaluationSummary]
 Fallback="ScreenEvaluation"
 #
-NextScreen="ScreenSelectMusic"
+NextScreen=Branch.AfterSummary()
 #
 Summary=true
-#
 
 [ScreenNameEntry]
 # !!! #
 Class="ScreenNameEntry"
 Fallback="ScreenWithMenuElementsBlank"
+#
 TimerX=SCREEN_CENTER_X+0
 TimerY=SCREEN_CENTER_Y-210
+#
 CategoryY=SCREEN_CENTER_Y+190
 CategoryZoom=0.7
+#
 CharsZoomSmall=1.0
 CharsZoomLarge=1.5
 CharsSpacingY=40
 CharsChoices="    ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 ScrollingCharsCommand=diffuse,0.6,0.8,0.8,1
 SelectedCharsCommand=diffuse,0.8,1,1,1
+#
 ReceptorArrowsY=SCREEN_CENTER_Y-140
 NumCharsToDrawBehind=2
 NumCharsToDrawTotal=10
@@ -3338,13 +3345,40 @@ TimerSeconds=24
 TimerStealth=false
 ShowStyleIcon=false
 MaxRankingNameLength=4
+#
 NextScreen="ScreenProfileSave"
+#
 PlayerP1OnePlayerOneSideX=SCREEN_CENTER_X-160
 PlayerP2OnePlayerOneSideX=SCREEN_CENTER_X+160
 PlayerP1TwoPlayersTwoSidesX=SCREEN_CENTER_X-160
 PlayerP2TwoPlayersTwoSidesX=SCREEN_CENTER_X+160
 PlayerP1OnePlayerTwoSidesX=SCREEN_CENTER_X
 PlayerP2OnePlayerTwoSidesX=SCREEN_CENTER_X
+
+[ScreenNameEntryTraditional]
+Class="ScreenNameEntryTraditional"
+Fallback="ScreenWithMenuElements"
+#
+TimerSeconds=30
+#
+RepeatRate=15
+RepeatDelay=1/4
+#
+NextScreen="ScreenProfileSaveSummary"
+#
+HelpText="Enter your name!"
+#
+CancelTransitionsOut=true
+MaxRankingNameLength=4
+CodeNames="Backspace,Left,Right,NextRow1=NextRow,NextRow2=NextRow,PrevRow,JumpToEnter,Enter"
+CodeLeft="+MenuLeft"
+CodeRight="+MenuRight"
+CodePrevRow="+MenuUp"
+CodeNextRow1="+MenuDown"
+CodeNextRow2="Select,~Select"
+CodeBackspace="@Select-MenuLeft"
+CodeJumpToEnter="@Select-Start"
+CodeEnter="Start"
 
 [ScreenProfileSave]
 Class="ScreenProfileSave"
@@ -3358,8 +3392,8 @@ TimerSeconds=-1
 [ScreenProfileSaveSummary]
 Fallback="ScreenProfileSave"
 #
-NextScreen="ScreenGameOver"
-PrevScreen="ScreenGameOver"
+NextScreen=Branch.AfterSaveSummary()
+PrevScreen=Branch.AfterSaveSummary()
 
 [ScreenGameOver]
 Class="ScreenEnding"
@@ -3592,7 +3626,6 @@ DifficultyFormat="%s:\n  %s\n"
 RoutinePlayerFormat="%s: %d\n"
 DescriptionFormat="%s:\n  %s\n"
 StepAuthorFormat="%s:\n  %s\n"
-ChartNameFormat="%s:\n  %s\n"
 ChartStyleFormat="%s:\n  %s\n"
 MainTitleFormat="%s:\n  %s\n"
 SubtitleFormat="%s:\n  %s\n"
