Add Steps Data read only menu for the editor.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3740,6 +3740,9 @@ Fallback="ScreenMiniMenu"
 [ScreenMiniMenuStepsInformation]
 Fallback="ScreenMiniMenu"
 
+[ScreenMiniMenuStepsData]
+Fallback="ScreenMiniMenu"
+
 [ScreenMiniMenuSongInformation]
 Fallback="ScreenMiniMenu"
 
