--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -28,7 +28,7 @@ ScreenHeight=480
 AutoSetStyle=GetUserPrefB("UserPrefAutoSetStyle")
 
 # Default modifiers and noteskin.
-DefaultModifiers="1.5x"
+DefaultModifiers=""
 DefaultNoteSkinName="default"
 
 # Difficulties to show. Useful for custom games where you want to hide these.
