add some missing Polish letters

--- a/Themes/_fallback/Fonts/frutiger 24px.ini
+++ b/Themes/_fallback/Fonts/frutiger 24px.ini
@@ -261,6 +261,7 @@ AdvanceExtraPixels=0
 253=12
 254=15
 255=12
+
 [alt]
 0=10
 1=10
@@ -390,3 +391,7 @@ AdvanceExtraPixels=0
 125=12
 126=6
 127=7
+
+[polish]
+line 0=ĄĘŁŃŚŹŻ
+line 1=ąęłńśźż
